[package]
name = "cp-zkp"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11"
tokio = { version = "1.18.0", features = ["macros", "rt-multi-thread"] }
prost = "0.12"
num-bigint = "0.4.3"
rand = "0.8.5"
num = "0.4.0"
hex = "0.4.3"

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"
